Fixed username to be more visible.

--- a/CSS/Add_Your_Date_Rate_My_Date.css
+++ b/CSS/Add_Your_Date_Rate_My_Date.css
@@ -2,6 +2,10 @@ body {
 	background-image: url("https://images.pexels.com/photos/1363876/pexels-photo-1363876.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 }
 
+#Username_Welcome {
+	color: white;
+}
+
 #header {
 	height: 80px;
 	background-color: white;
@@ -13,6 +17,7 @@ body {
 	height: 100%;
 	padding-bottom: 30px;
 	background-color: #A9E3F0;
+	color: black;
 }
 
 #footer {
