--- a/CSS/Homepage_Rate_My_Date.css
+++ b/CSS/Homepage_Rate_My_Date.css
@@ -2,6 +2,10 @@ body {
 	background-image: url("https://images.pexels.com/photos/1363876/pexels-photo-1363876.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 }
 
+#Username_Welcome {
+	color: white;
+}
+
 #header {
 	height: 80px;
 	background-color: white;
